--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8736,205 +8736,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #ab8a8a; }
+  background: #f4fdbe; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #b72ab7; }
+  background: #4c18d1; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #332795; }
+  background: #27dec9; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #beda9a; }
+  background: #892c15; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #5de7b4; }
+  background: #1e8b6f; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #17b7aa; }
+  background: #ba8d37; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #5b41a3; }
+  background: #343859; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #208447; }
+  background: #a50ebc; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #0dc114; }
+  background: #10d8af; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #b4e906; }
+  background: #5be058; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #d90734; }
+  background: #80a139; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #6da4af; }
+  background: #1dda82; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #be24e6; }
+  background: #0f72d1; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #3075e0; }
+  background: #4a4693; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #a444cd; }
+  background: #c08f9a; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #6f9615; }
+  background: #8a1fed; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #e7ea7a; }
+  background: #9c1ccc; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #808d73; }
+  background: #1951c1; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #61e238; }
+  background: #7207ca; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #0eb741; }
+  background: #2bc861; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #2022dd; }
+  background: #d80e6b; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #73e6ed; }
+  background: #2cad39; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #b099fa; }
+  background: #162b66; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #4ab26e; }
+  background: #7e27b9; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #4d4212; }
+  background: #e7f7ff; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #e38348; }
+  background: #c8b676; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #b63fe7; }
+  background: #d9cffd; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #9a8210; }
+  background: #872908; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #5c80c6; }
+  background: #68ccc4; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #5052ca; }
+  background: #3e6957; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #b15449; }
+  background: #26ab8c; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #7a6ea7; }
+  background: #98d686; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #1ca726; }
+  background: #259902; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #75c51c; }
+  background: #26952e; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #9a5830; }
+  background: #b4adc8; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #6dcf51; }
+  background: #19b6ee; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #cb157f; }
+  background: #9f215d; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #45ac16; }
+  background: #393a61; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #af0107; }
+  background: #b4e0e4; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #ab58ca; }
+  background: #ac7d9d; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #4ec880; }
+  background: #2af924; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #ae6190; }
+  background: #383a93; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #db75ec; }
+  background: #e1e9c7; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #fb6c53; }
+  background: #c8aaa2; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #208c96; }
+  background: #3f0af4; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #d76bee; }
+  background: #a9f217; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #c2f6c2; }
+  background: #92e6a3; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #f0299a; }
+  background: #55c8db; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #0dfbc1; }
+  background: #889064; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #64169f; }
+  background: #793d0b; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #ed4f25; }
+  background: #a147f6; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #ffa601; }
+  background: #436986; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #20d7ed; }
+  background: #34483b; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #d6f98b; }
+  background: #21b2cb; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #249bff; }
+  background: #dfe9f4; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #110fa1; }
+  background: #76cd83; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #5a4867; }
+  background: #5a5a2c; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #b50a1d; }
+  background: #ad4f36; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #4eacb7; }
+  background: #1a0853; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #947cb5; }
+  background: #ac2e3d; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #c0df01; }
+  background: #a41419; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #962676; }
+  background: #bc7897; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #fd8e5c; }
+  background: #af645b; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #f4b7d1; }
+  background: #dfd054; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #87ccc8; }
+  background: #f675bc; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #a2de34; }
+  background: #882539; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #ebd2e2; }
+  background: #7350dc; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #d18e6a; }
+  background: #c28796; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #461bd8; }
+  background: #dad38a; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #2ded57; }
+  background: #0c8da5; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #64e401; }
+  background: #cc805a; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #0b94ee; }
+  background: #04f38c; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #e8e520; }
+  background: #360ce2; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #f222a6; }
+  background: #f0d14e; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #84251a; }
+  background: #d4681a; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #77c26b; }
+  background: #dddd3b; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #efdd4b; }
+  background: #920387; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #cde0f1; }
+  background: #8ce084; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #e40b8c; }
+  background: #79aac8; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #e29ed4; }
+  background: #657f71; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #c8237c; }
+  background: #35f53e; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #2a5ce9; }
+  background: #fe03c5; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #8bcefd; }
+  background: #7e6148; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #583fdc; }
+  background: #fb87ee; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #12700a; }
+  background: #49ff97; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #393d06; }
+  background: #8486e2; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #c30622; }
+  background: #fcb706; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #4096a3; }
+  background: #55cf17; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #869765; }
+  background: #9bfef5; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #52c077; }
+  background: #6b52ab; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #ed7e14; }
+  background: #718568; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #2d8c53; }
+  background: #b9cb33; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #08f3c0; }
+  background: #70d893; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #54b36f; }
+  background: #137a4c; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #0736ea; }
+  background: #acb53f; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #bd129d; }
+  background: #5ff6a4; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #890aae; }
+  background: #ba2d9a; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #1eb478; }
+  background: #eb16f3; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #95be2c; }
+  background: #9159d9; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #0a9227; }
+  background: #f714db; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
