upload new build in Backend folder

--- a/backend/css/bootstrap.css
+++ b/backend/css/bootstrap.css
@@ -8736,205 +8736,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #d071ce; }
+  background: #7f95f5; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #12f810; }
+  background: #766096; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #8fb1f6; }
+  background: #d6f5f6; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #b8d5b8; }
+  background: #f8a2e6; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #1b9486; }
+  background: #adb87d; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #b96c20; }
+  background: #e78481; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #92f2db; }
+  background: #c84b69; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #7f3def; }
+  background: #ad7c5d; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #c0e0b2; }
+  background: #a84468; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #f7fa40; }
+  background: #dd11f5; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #961e21; }
+  background: #2abcba; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #88c855; }
+  background: #f351cf; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #020527; }
+  background: #0ec384; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #252e01; }
+  background: #99dedc; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #097ce6; }
+  background: #e3f6aa; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #aee7b4; }
+  background: #7d4ce0; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #36581a; }
+  background: #718d19; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #ef2842; }
+  background: #d2e8d9; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #c15ff7; }
+  background: #d45e27; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #a5f9b1; }
+  background: #64341e; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #8d6d38; }
+  background: #9fac18; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #2a89c9; }
+  background: #da1040; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #41d7eb; }
+  background: #d8246d; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #427790; }
+  background: #4bbbd1; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #081814; }
+  background: #7293dc; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #2b1d44; }
+  background: #97160d; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #48e732; }
+  background: #fef972; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #770231; }
+  background: #7e02cd; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #6e7f10; }
+  background: #2e04be; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #1744c7; }
+  background: #843262; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #0c7f8f; }
+  background: #ea38e1; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #2e490e; }
+  background: #60ad61; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #8756a9; }
+  background: #b8921f; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #b43787; }
+  background: #ac7e83; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #26e283; }
+  background: #5818d8; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #4f8e94; }
+  background: #eb3b9c; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #ff56bb; }
+  background: #8e0f99; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #5e83b2; }
+  background: #195fe5; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #cb4f9d; }
+  background: #c3afe1; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #8d536b; }
+  background: #2e41f6; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #f2bda0; }
+  background: #334bb5; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #9f436e; }
+  background: #57ed99; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #6618b8; }
+  background: #45bd27; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #d09dd9; }
+  background: #9fb0ec; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #04297a; }
+  background: #2813a8; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #dddb02; }
+  background: #750c85; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #241d65; }
+  background: #192a94; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #5ba604; }
+  background: #cb6f7a; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #f658ef; }
+  background: #17393b; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #ac6c33; }
+  background: #df8734; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #7252e9; }
+  background: #d8aed3; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #62e6f2; }
+  background: #8ac90d; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #7f756a; }
+  background: #336558; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #2394e0; }
+  background: #17e7e9; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #cad86b; }
+  background: #bbe44b; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #8357ef; }
+  background: #3e1ab8; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #5b186c; }
+  background: #ffb75d; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #aefdda; }
+  background: #ac0db9; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #29a041; }
+  background: #d119de; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #eece20; }
+  background: #d52e27; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #6fa8a4; }
+  background: #d14037; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #e72340; }
+  background: #fdeaa9; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #dccb03; }
+  background: #2bda6f; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #7c43e8; }
+  background: #a61996; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #afc3bc; }
+  background: #b4b4f1; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #c215ef; }
+  background: #82a5db; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #ab9109; }
+  background: #a0f03b; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #e0d3e8; }
+  background: #e93034; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #9a8d41; }
+  background: #f676f5; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #ac03fe; }
+  background: #16dc3a; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #90beca; }
+  background: #3ce5f6; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #7fde1a; }
+  background: #2dabfa; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #c4e0de; }
+  background: #40c784; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #aff778; }
+  background: #89297c; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #d8d5ab; }
+  background: #ff9459; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #a7b143; }
+  background: #17d20b; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #a31650; }
+  background: #9b526d; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #90a1ac; }
+  background: #9b811c; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #873e9d; }
+  background: #6b32e8; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #31b56f; }
+  background: #588455; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #6a6bbd; }
+  background: #993fef; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #15de64; }
+  background: #74b263; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #4d09cf; }
+  background: #7111f0; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #f001dc; }
+  background: #58a16f; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #ae4a7a; }
+  background: #51e0f8; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #904573; }
+  background: #35b2bf; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #c07610; }
+  background: #9a9a10; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #094025; }
+  background: #fd7a10; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #f1eb1b; }
+  background: #17aa71; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #cb14d8; }
+  background: #654ada; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #c00945; }
+  background: #953f72; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #60347f; }
+  background: #3999c3; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #ef90fd; }
+  background: #417a4c; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #6d7870; }
+  background: #b94eb7; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #b7ba8c; }
+  background: #3af262; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #02fb72; }
+  background: #d7819d; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #974bcf; }
+  background: #645e75; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #08b2d9; }
+  background: #ac1dc4; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #c8ba59; }
+  background: #43fd42; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #2c7ec3; }
+  background: #c26179; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -9865,7 +9865,7 @@ table .bold-heading {
     margin-right: 30px; }
 
 .choose-file-modal {
-  margin-left: 8px; }
+  margin-left: 15px; }
 
 .region-checkbox {
   display: flex; }
@@ -11609,7 +11609,7 @@ input:checked + .sliders:before {
   margin-left: 15px; }
 
 .modal-add-connections-wrapper .adapter-modal-content-box {
-  padding: 40px;
+  padding: 40px 25px;
   padding-top: 11px; }
 
 .modal-add-connections-wrapper .adapter-modal-field-row div {
@@ -11651,7 +11651,7 @@ input:checked + .sliders:before {
   font-size: 14px; }
 
 .add-edit-connection-heading-row .add-edit-heading {
-  font-weight: normal !important; }
+  color: #4c4c4c; }
 
 .connector-config-row .form-control {
   padding: 9px 16px; }
@@ -11955,7 +11955,8 @@ input:checked + .sliders:before {
 .process-button-wrapper {
   margin: 15px 0px 40px; }
   .process-button-wrapper ul {
-    display: flex; }
+    display: flex;
+    align-items: center; }
     .process-button-wrapper ul li span {
       background: #e0e0e1;
       border: 2px solid #e0e0e1;
@@ -11968,14 +11969,17 @@ input:checked + .sliders:before {
       position: relative; }
       .process-button-wrapper ul li span::before {
         content: "";
-        width: 0;
-        height: 0;
-        border-top: 8px solid transparent;
-        border-bottom: 8px solid transparent;
-        border-left: 8px solid #e0e0e1;
+        width: 10px;
+        height: 16px;
+        background: url(../images/right-arrow-light-gray.png) no-repeat;
+        width: 10px;
+        height: 16px;
         position: absolute;
-        top: 35%;
-        right: -7px; }
+        top: 0px;
+        bottom: 0px;
+        display: flex;
+        margin: auto;
+        right: -8px; }
     .process-button-wrapper ul .no-arrow::before {
       content: "";
       display: none; }
@@ -11987,7 +11991,15 @@ input:checked + .sliders:before {
       cursor: pointer; }
       .process-button-wrapper ul .active-btn::before {
         content: "";
-        border-left: 8px solid #776fff; }
+        background: url(../images/right-arrow.png) no-repeat;
+        width: 10px;
+        height: 16px;
+        position: absolute;
+        top: 0px;
+        bottom: 0px;
+        display: flex;
+        margin: auto;
+        right: -8px; }
     .process-button-wrapper ul .sucess-active {
       background: #fff;
       border: 2px solid #776fff;
@@ -12014,14 +12026,28 @@ input:checked + .sliders:before {
   background: transparent;
   border: 2px solid #776fff;
   color: #000;
-  cursor: pointer; }
+  cursor: pointer;
+  display: inline-block; }
   .process-button-level-tow ul li span::before {
     content: "";
-    border-left: 8px solid #776fff; }
+    background: url(../images/right-arrow.png) no-repeat;
+    width: 10px;
+    height: 16px;
+    right: -12px; }
 .process-button-level-tow ul li .three-level-active-btn {
   background: #776fff !important;
   border: 2px solid #776fff !important;
   color: #fff !important; }
+  .process-button-level-tow ul li .three-level-active-btn::before {
+    content: "";
+    background: url(../images/right-arrow.png) no-repeat;
+    width: 10px;
+    height: 16px;
+    right: -12px; }
+
+ul li:last-child .active-btn ::before {
+  content: "";
+  background: none !important; }
 
 .full-search-row form {
   width: 100%; }
@@ -12055,10 +12081,9 @@ input:checked + .sliders:before {
   border: 2px solid #776fff; }
 
 .policy-btns-wrapper {
-  text-align: right;
-  padding: 0px 33px; }
+  text-align: right; }
   .policy-btns-wrapper button {
-    margin-right: 15px; }
+    margin-left: 15px; }
 
 /*AND OR BTN CSS NEW*/
 .switch-btn {
@@ -12825,8 +12850,21 @@ select:focus {
   outline: none !important;
   outline: none -webkit-focus-ring-color !important; }
 
-table .parent-row {
-  border-bottom: 1px solid #ecedf2; }
+table .parent-row,
+.child-row-no-td-border {
+  border-bottom: 1px solid #ecedf2 !important; }
+
+.c-gray-td {
+  padding: 8px;
+  background: #bbb;
+  border-radius: 50%;
+  color: #fff;
+  font-size: 18px;
+  font-weight: bold;
+  text-align: center;
+  width: 33px;
+  height: 33px;
+  display: inline-block; }
 
 .page-item:first-child .page-link {
   margin-left: 0px;
@@ -13110,12 +13148,23 @@ table .parent-row {
   .notification-main-wrapper .adding-adapter-modal-header {
     margin-top: 15px !important; }
   .notification-main-wrapper .notification-model-header {
-    padding-top: 5px !important; } }
+    padding-top: 5px !important; }
+
+  .role-to-txt h2 {
+    padding-left: 0px; } }
 /*767 screen end here*/
 /*768 to 1023 screen css*/
 @media only screen and (min-width: 768px) and (max-width: 1023px) {
   .LoginPanel {
-    padding: 20px; } }
+    padding: 20px; }
+
+  .role-to-txt h2 {
+    padding-left: 0px; } }
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
+  .modal-add-connections-wrapper .choose-file-modal {
+    margin-left: 15px; }
+  .modal-add-connections-wrapper .region-checkbox {
+    padding: 0px !important; } }
 @media only screen and (min-width: 320px) and (max-width: 1023px) {
   .query-wizard-exp-contents {
     overflow-x: auto; }
